# TaskManager

./: CMakeLists.txt  Client.cpp  Dockerfile  README.md  Server.cpp  main.cpp
Proto/: AddTaskResult.proto  Date.proto  ID.proto  Priority.proto  RepositoryData.proto  Requests.proto  Response.proto  SerializeModel.proto  SerializedModel.proto  TaskServiceTransport.proto  TransportTaskData.proto
cli/: Context.cpp  Context.h  CorrectInput.h  Factory.h  IO_Layer.h  IO_LayerInterface.h  InputOutpuConsoleLayer.h  InputOutputConsoleLayer.h  InputOutputLayer.h  StatesController.cpp  StatesController.h
cli/Factory/: Factory.cpp  Factory.h  FactoryExecuteStatesMachine.cpp  FactoryExecuteStatesMachine.h  FactoryFiniteStatesMachines.cpp  FactoryFiniteStatesMachines.h  FactoryStates.cpp  FactoryStates.h  LasyInit.h  LasyInitClass.h  LazyInit.h  LazyInitClass.h
cli/States/: AddSubtaskState.cpp  AddSubtaskState.h  AddTaskState.cpp  AddTaskState.h  BaseState.cpp  BaseState.h  CompleteState.cpp  CompleteState.h  DeleteState.cpp  DeleteState.h  Menu.cpp  Menu.h  PostponeState.cpp  PostponeState.h  ShowAllState.cpp  ShowAllState.h  ShowByLabelState.cpp  ShowByLabelState.h  ShowByNameState.cpp  ShowByNameState.h  ShowThisWeekState.cpp  ShowThisWeekState.h  ShowTodayState.cpp  ShowTodayState.h  State.cpp  State.h  StateOperationResult.h  StatesFactory.h  StatesID.h  StatesList.h
cli/States/EditSystemStates/: AddSubtaskState.cpp  AddSubtaskState.h  AddTaskState.cpp  AddTaskState.h  CompleteState.cpp  CompleteState.h  DeleteState.cpp  DeleteState.h  EditState.cpp  EditState.h  LoadState.cpp  LoadState.h  PostponeState.cpp  PostponeState.h  SaveState.cpp
cli/States/InputStates/: InputDateState.cpp  InputDateState.h  InputFileNameState.cpp  InputIDState.cpp  InputIDState.h  InputLabelState.cpp  InputLabelState.h  InputNameState.cpp  InputNameState.h  InputPriorityState.cpp  InputPriorityState.h  InputState.h  InputTask.cpp  InputTask.h
cli/States/Menus/: BaseMenu.cpp  BaseMenu.h  ContinueMenu.h  Menu.cpp  Menu.h  MenuActions.h
cli/States/ShowStates/: ShowAllState.cpp  ShowAllState.h  ShowByIDState.cpp  ShowByIDState.h  ShowByLabelState.cpp  ShowByLabelState.h  ShowByNameState.cpp  ShowByNameState.h  ShowState.cpp  ShowState.h  ShowThisWeekState.cpp  ShowThisWeekState.h  ShowTodayState.cpp  ShowTodayState.h
cli/StatesControllers/: ExecuteStatesMachine.cpp  ExecuteStatesMachine.h  FiniteStateMachine.cpp  FiniteStateMachine.h  FiniteStateMachinesList.h  FiniteStatesMachinesList.h  StateMachine.h  StateMachineMenu.cpp  StateMachineMenu.h  StatesController.cpp  StatesController.h
cmake/: libs.cmake  project.cmake  proto.cmake  unit_tests.cmake
core/API/: AddTaskResult.h  TaskDTO.cpp  TaskDTO.h  TaskID.cpp  TaskService.cpp  TaskService.h  TaskServiceClass.cpp  TaskServiceClass.h  TaskServiceDTO.cpp  TaskServiceDTO.h  TaskServiceUtils.cpp  TaskServiceUtils.h
core/API/DTO/: TaskServiceDTO.h
core/API/Service/: TaskService.h  TaskServiceClass.h  TaskServiceClient.cpp  TaskServiceClient.h  TaskServiceServer.cpp  TaskServiceServer.h
core/API/Utils/: TaskServiceClientUtils.cpp  TaskServiceClientUtils.h  TaskServiceServerUtils.cpp  TaskServiceServerUtils.h  TaskServiceUtils.h
core/DataPersister/: DataPersister.cpp  DataPersister.h  Persister.cpp  Persister.h  TaskPersister.cpp  TaskPersister.h
core/Date/: Date.cpp  Date.h
core/Memory_Model/: Convertor.cpp  Convertor.h
core/Memory_Model/RepositoriesFactory/: RepositoriesFactory.h  TaskRepositoryFactory.h
core/Memory_Model/Storage/: RepositoryController.h  TaskRepository.cpp  TaskRepository.h  TaskRepositoryClass.cpp  TaskRepositoryClass.h  TaskRepositoryController.cpp  TaskRepositoryController.h  TaskRepositoryDTO.cpp  TaskRepositoryDTO.h  TaskRepositoryInterface.h  TaskStorage.cpp  TaskStorage.h  TaskStorageClass.cpp  TaskStorageClass.h  TaskStorageInterface.h  TaskView.cpp  TaskView.h  TaskViewClass.cpp  TaskViewClass.h  TaskViewInterface.h
core/Memory_Model/Task/: Task.h  (+2 more)
core/Persister/: Persister.cpp  Persister.h  TaskPersister.cpp  TaskPersister.h  TaskPersisterUtils.cpp  TaskPersisterUtils.h
core/Repository/: AddTaskResult.h  TaskRepository.h  TaskRepositoryClass.cpp  TaskRepositoryClass.h
src/: Client.cpp  Convertor.cpp  Convertor.h  Date.cpp  Date.h  FullTask.cpp  FullTask.h  Server.cpp  Task.cpp  Task.h  TaskCreateResult.cpp  TaskCreateResult.h  TaskDTO.cpp  TaskDTO.h  TaskEntity.cpp  TaskEntity.h  TaskID.cpp  TaskID.h  TaskIDGenerate.cpp  TaskIDGenerate.h  TaskOutput.cpp  TaskOutput.h  TaskRepository.cpp  TaskRepository.h  TaskService.cpp  TaskService.h  TaskView.cpp  TaskView.h  TestTask.cpp  conifg.h
src/API/: AddTaskResult.h  Priority.h  TaskDTO.cpp  TaskDTO.h  TaskID.cpp  TaskID.h  TaskRepository.cpp  TaskRepository.h  TaskService.cpp  TaskService.h
src/Memory Model/: Date.cpp  Date.h  Task.h  TaskEntity.h  TaskRepository.cpp  TaskRepository.h  TaskStorage.cpp  TaskStorage.h  TaskView.cpp  TaskView.h
src/Memory_Model/: Date.cpp  Date.h  Task.cpp  Task.h  TaskIDGenerate.cpp  TaskStorage.cpp  TaskStorage.h  TaskView.cpp  TaskView.h
src/cli/: Context.h
src/core/: TaskServiceServer.h  TaskServiceServerUtils.cpp  TaskServiceServerUtils.h
tests/: TestConvertor.cpp  TestDate.cpp  TestTask.cpp  TestTaskDTO.cpp  TestTaskID.cpp  TestTaskRepository.cpp  TestTaskService.cpp  TestTaskStorage.cpp  TestTaskView.cpp
tests/cli/: TestEditStates.cpp  TestFactory.cpp  TestFactoryStates.cpp  TestFininteStatesMachine.cpp  TestInputStates.cpp  TestInputTaskParams.cpp  TestShowStates.cpp  TestStateMachinesFactory.cpp  TestTaskServiceClientUtils.cpp
tests/core/: TestConvertor.cpp  TestDate.cpp  TestTask.cpp  TestTaskDTO.cpp  TestTaskID.cpp  TestTaskPersister.cpp  TestTaskRepository.cpp  TestTaskRepositoryController.cpp  TestTaskRepositoryDTO.cpp  TestTaskRepositoryUtils.cpp  TestTaskService.cpp  TestTaskServiceClientUtils.cpp  TestTaskServiceDTO.cpp  TestTaskServiceDTOUtils.cpp  TestTaskServiceServer.cpp  TestTaskServiceServerUtils.cpp  TestTaskStorage.cpp  TestTaskView.cpp
tests/mock/: InputOutput.h  Service.h  View.h
(+156 files in other folders)
